K8S/accounts-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-api
  labels:
    app: accounts-api
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: accounts-api

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: accounts-api-nodeport
#   labels:
#     app: accounts-api
# spec:
#   ports:
#     - port: 80
#       targetPort: 80
#   selector:
#     app: accounts-api
#   type: NodePort
#---

#apiVersion: v1
#kind: Service
#metadata:
#  name: accounts-api
#  labels:
#    app: accounts-api
#spec:
#  type: NodePort
#  ports:
#  - port: 8080
#    protocol: TCP
#  selector:
#    app: accounts-api
