K8S/accounts.api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-api-deployment
  labels:
    app: accounts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-api
  template:
    metadata:
      labels:
        app: accounts-api
      annotations:
        dapr.io/enabled: 'true'
        dapr.io/app-id: 'accounts-api'
        dapr.io/app-port: '80'
    spec:
      containers:
        - name: accounts-api
          image: rdrrichards/qiqo-accounts-api
          imagePullPolicy: IfNotPresent
          # ports:
          #   - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: accounts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: accounts-api
  ports:
    - name: accounts-api
      protocol: TCP
      port: 80
      targetPort: 80
