K8S/frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-np-srv
spec:
  type: NodePort
  selector:
    app: qiqo-frontend
  ports:
    - name: qiqo-frontend
      protocol: TCP
      port: 80
      targetPort: 80
